# lora_e32

./: .gitmodules  CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yml
components/bluetooth_le/: CMakeLists.txt
components/bluetooth_le/include/: ble.h
components/bluetooth_le/src/: ble.c
components/lora/: CMakeLists.txt
components/lora/include/: lora_e32.h
components/lora/src/: lora_e32.c
components/lora/test/: CMakeLists.txt  lora_e32_test.c
components/wifi/: CMakeLists.txt
components/wifi/include/: wifi_scan.h
components/wifi/src/: wifi_scan.c
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  sdkconfig.old
test/main/: CMakeLists.txt
